rt-abi/src/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const __bool_true_false_are_defined: u32 = 1;
pub const true_: u32 = 1;
pub const false_: u32 = 0;
pub type wchar_t = ::core::ffi::c_int;
#[repr(C)]
#[repr(align(16))]
#[derive(Debug, Copy, Clone)]
pub struct max_align_t {
    pub __clang_max_align_nonce1: ::core::ffi::c_longlong,
    pub __bindgen_padding_0: u64,
    pub __clang_max_align_nonce2: u128,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of max_align_t"][::core::mem::size_of::<max_align_t>() - 32usize];
    ["Alignment of max_align_t"][::core::mem::align_of::<max_align_t>() - 16usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce1"]
        [::core::mem::offset_of!(max_align_t, __clang_max_align_nonce1) - 0usize];
    ["Offset of field: max_align_t::__clang_max_align_nonce2"]
        [::core::mem::offset_of!(max_align_t, __clang_max_align_nonce2) - 16usize];
};
pub type int_least64_t = i64;
pub type uint_least64_t = u64;
pub type int_fast64_t = i64;
pub type uint_fast64_t = u64;
pub type int_least32_t = i32;
pub type uint_least32_t = u32;
pub type int_fast32_t = i32;
pub type uint_fast32_t = u32;
pub type int_least16_t = i16;
pub type uint_least16_t = u16;
pub type int_fast16_t = i16;
pub type uint_fast16_t = u16;
pub type int_least8_t = i8;
pub type uint_least8_t = u8;
pub type int_fast8_t = i8;
pub type uint_fast8_t = u8;
pub type intmax_t = ::core::ffi::c_long;
pub type uintmax_t = ::core::ffi::c_ulong;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_slice {
    pub len: usize,
    pub ptr: *mut ::core::ffi::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of rt_slice"][::core::mem::size_of::<rt_slice>() - 16usize];
    ["Alignment of rt_slice"][::core::mem::align_of::<rt_slice>() - 8usize];
    ["Offset of field: rt_slice::len"][::core::mem::offset_of!(rt_slice, len) - 0usize];
    ["Offset of field: rt_slice::ptr"][::core::mem::offset_of!(rt_slice, ptr) - 8usize];
};
pub type rt_objid = __uint128_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct duration {
    pub seconds: u64,
    pub nanos: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of duration"][::core::mem::size_of::<duration>() - 16usize];
    ["Alignment of duration"][::core::mem::align_of::<duration>() - 8usize];
    ["Offset of field: duration::seconds"][::core::mem::offset_of!(duration, seconds) - 0usize];
    ["Offset of field: duration::nanos"][::core::mem::offset_of!(duration, nanos) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct option_duration {
    pub dur: duration,
    pub is_some: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of option_duration"][::core::mem::size_of::<option_duration>() - 24usize];
    ["Alignment of option_duration"][::core::mem::align_of::<option_duration>() - 8usize];
    ["Offset of field: option_duration::dur"]
        [::core::mem::offset_of!(option_duration, dur) - 0usize];
    ["Offset of field: option_duration::is_some"]
        [::core::mem::offset_of!(option_duration, is_some) - 16usize];
};
pub type alloc_flags = u32;
pub const ZERO_MEMORY: alloc_flags = 1;
extern "C-unwind" {
    pub fn twz_rt_malloc(sz: usize, align: usize, flags: alloc_flags) -> *mut ::core::ffi::c_void;
}
extern "C-unwind" {
    pub fn twz_rt_dealloc(
        ptr: *mut ::core::ffi::c_void,
        sz: usize,
        align: usize,
        flags: alloc_flags,
    );
}
extern "C-unwind" {
    pub fn twz_rt_realloc(
        ptr: *mut ::core::ffi::c_void,
        sz: usize,
        align: usize,
        new_size: usize,
        flags: alloc_flags,
    ) -> *mut ::core::ffi::c_void;
}
pub type exit_code = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct basic_aux {
    pub argc: usize,
    pub args: *mut *mut ::core::ffi::c_char,
    pub env: *mut *mut ::core::ffi::c_char,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of basic_aux"][::core::mem::size_of::<basic_aux>() - 24usize];
    ["Alignment of basic_aux"][::core::mem::align_of::<basic_aux>() - 8usize];
    ["Offset of field: basic_aux::argc"][::core::mem::offset_of!(basic_aux, argc) - 0usize];
    ["Offset of field: basic_aux::args"][::core::mem::offset_of!(basic_aux, args) - 8usize];
    ["Offset of field: basic_aux::env"][::core::mem::offset_of!(basic_aux, env) - 16usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct basic_return {
    pub code: exit_code,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of basic_return"][::core::mem::size_of::<basic_return>() - 4usize];
    ["Alignment of basic_return"][::core::mem::align_of::<basic_return>() - 4usize];
    ["Offset of field: basic_return::code"][::core::mem::offset_of!(basic_return, code) - 0usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct comp_init_info {
    pub legacy_init: ::core::option::Option<unsafe extern "C-unwind" fn()>,
    pub init_array: *mut ::core::option::Option<unsafe extern "C-unwind" fn()>,
    pub init_array_len: usize,
    pub comp_config_info: *mut ::core::ffi::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of comp_init_info"][::core::mem::size_of::<comp_init_info>() - 32usize];
    ["Alignment of comp_init_info"][::core::mem::align_of::<comp_init_info>() - 8usize];
    ["Offset of field: comp_init_info::legacy_init"]
        [::core::mem::offset_of!(comp_init_info, legacy_init) - 0usize];
    ["Offset of field: comp_init_info::init_array"]
        [::core::mem::offset_of!(comp_init_info, init_array) - 8usize];
    ["Offset of field: comp_init_info::init_array_len"]
        [::core::mem::offset_of!(comp_init_info, init_array_len) - 16usize];
    ["Offset of field: comp_init_info::comp_config_info"]
        [::core::mem::offset_of!(comp_init_info, comp_config_info) - 24usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct minimal_init_info {
    pub args: *mut *mut ::core::ffi::c_char,
    pub argc: usize,
    pub envp: *mut *mut ::core::ffi::c_char,
    pub phdrs: *mut ::core::ffi::c_void,
    pub nr_phdrs: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of minimal_init_info"][::core::mem::size_of::<minimal_init_info>() - 40usize];
    ["Alignment of minimal_init_info"][::core::mem::align_of::<minimal_init_info>() - 8usize];
    ["Offset of field: minimal_init_info::args"]
        [::core::mem::offset_of!(minimal_init_info, args) - 0usize];
    ["Offset of field: minimal_init_info::argc"]
        [::core::mem::offset_of!(minimal_init_info, argc) - 8usize];
    ["Offset of field: minimal_init_info::envp"]
        [::core::mem::offset_of!(minimal_init_info, envp) - 16usize];
    ["Offset of field: minimal_init_info::phdrs"]
        [::core::mem::offset_of!(minimal_init_info, phdrs) - 24usize];
    ["Offset of field: minimal_init_info::nr_phdrs"]
        [::core::mem::offset_of!(minimal_init_info, nr_phdrs) - 32usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub union init_info_ptrs {
    pub comp: *mut comp_init_info,
    pub min: *mut minimal_init_info,
    pub monitor: *mut ::core::ffi::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of init_info_ptrs"][::core::mem::size_of::<init_info_ptrs>() - 8usize];
    ["Alignment of init_info_ptrs"][::core::mem::align_of::<init_info_ptrs>() - 8usize];
    ["Offset of field: init_info_ptrs::comp"]
        [::core::mem::offset_of!(init_info_ptrs, comp) - 0usize];
    ["Offset of field: init_info_ptrs::min"][::core::mem::offset_of!(init_info_ptrs, min) - 0usize];
    ["Offset of field: init_info_ptrs::monitor"]
        [::core::mem::offset_of!(init_info_ptrs, monitor) - 0usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct runtime_info {
    pub flags: i32,
    pub kind: i32,
    pub init_info: init_info_ptrs,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of runtime_info"][::core::mem::size_of::<runtime_info>() - 16usize];
    ["Alignment of runtime_info"][::core::mem::align_of::<runtime_info>() - 8usize];
    ["Offset of field: runtime_info::flags"][::core::mem::offset_of!(runtime_info, flags) - 0usize];
    ["Offset of field: runtime_info::kind"][::core::mem::offset_of!(runtime_info, kind) - 4usize];
    ["Offset of field: runtime_info::init_info"]
        [::core::mem::offset_of!(runtime_info, init_info) - 8usize];
};
pub const RUNTIME_INIT_MIN: i32 = 0;
pub const RUNTIME_INIT_MONITOR: i32 = 1;
pub const RUNTIME_INIT_COMP: i32 = 2;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct option_exit_code {
    pub is_some: i32,
    pub value: exit_code,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of option_exit_code"][::core::mem::size_of::<option_exit_code>() - 8usize];
    ["Alignment of option_exit_code"][::core::mem::align_of::<option_exit_code>() - 4usize];
    ["Offset of field: option_exit_code::is_some"]
        [::core::mem::offset_of!(option_exit_code, is_some) - 0usize];
    ["Offset of field: option_exit_code::value"]
        [::core::mem::offset_of!(option_exit_code, value) - 4usize];
};
extern "C-unwind" {
    pub fn twz_rt_exit(code: exit_code);
}
extern "C-unwind" {
    pub fn twz_rt_abort();
}
extern "C-unwind" {
    pub fn twz_rt_pre_main_hook() -> option_exit_code;
}
extern "C-unwind" {
    pub fn twz_rt_post_main_hook();
}
extern "C-unwind" {
    pub fn twz_rt_runtime_entry(
        arg: *const runtime_info,
        std_entry: ::core::option::Option<
            unsafe extern "C-unwind" fn(arg1: basic_aux) -> basic_return,
        >,
    );
}
pub type futex_word = u32;
extern "C-unwind" {
    pub fn twz_rt_futex_wait(ptr: *mut u32, expected: futex_word, timeout: option_duration)
        -> bool;
}
extern "C-unwind" {
    pub fn twz_rt_futex_wake(ptr: *mut u32, max: i64) -> bool;
}
pub const FUTEX_WAKE_ALL: i64 = -1;
extern "C-unwind" {
    pub fn twz_rt_yield_now();
}
extern "C-unwind" {
    pub fn twz_rt_set_name(name: *const ::core::ffi::c_char);
}
extern "C-unwind" {
    pub fn twz_rt_sleep(dur: duration);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tls_index {
    pub mod_id: usize,
    pub offset: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of tls_index"][::core::mem::size_of::<tls_index>() - 16usize];
    ["Alignment of tls_index"][::core::mem::align_of::<tls_index>() - 8usize];
    ["Offset of field: tls_index::mod_id"][::core::mem::offset_of!(tls_index, mod_id) - 0usize];
    ["Offset of field: tls_index::offset"][::core::mem::offset_of!(tls_index, offset) - 8usize];
};
extern "C-unwind" {
    pub fn twz_rt_tls_get_addr(index: *mut tls_index) -> *mut ::core::ffi::c_void;
}
pub type thread_id = u32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct spawn_args {
    pub stack_size: usize,
    pub start: usize,
    pub arg: usize,
}
